  is not necessarily 1317 (QueryInterrupted). It might as well be 1028 (FileSortAborted).
  Fix timeout handling to handle both error codes in the same fashion (bug #53357)
- added public MySqlHelper.ExecuteDataReader method that takes an external connection (bug #54570)
- applied patch from 5.x series that reset the connection to the base encoding when doing a 
  connection reset (bug #47153)

Version 6.0.6
- When sending file to server (LOAD DATA INFILE) open the file for read only, not for read/write
 (bug #48944)
- Fixed precision calculation on decimal and newdecimal columns (bug #48171)
- Fixed problem caused by us not including a 'REFERENCED_TABLE_CATALOG' column in our
  foreign keys collection (bug #48974)
- fixed entity framework function processing so that it handles stored functions properly
  (bug #45277)
- fixed a bug with prepared statements and unsigned bigint.  Patch also provided a nice speedup to reading
  integer values from the wire (bug #49794)
- fixed problem where not specifying the data type of the return value of a function caused it to 
  mistakenly use Decimal as the return type (bug #49642)
- fixed bug where a scipt that had an empty last line would cause an InvalidOperationException (bug #50344)
- fixed bug where a connection could not be reused in the IDE in some circumstances (bug #41629)
- small performance fix (bug #51149)
- fixed issue with script execution & multi-char delimiters (bug #46429)
- fixed bug in table editor where clicking back on the last row added can sometimes
  cause a ArgumentOutOfRange exception
- fixed bug where a commands batchable command text was not getting reset when the 
  command text was reset (bug #50444)
- fixed bug where using a currently non-batchable command in a batch would throw an exception
  (bug #50123)
- fixed bug where binary or blob columns would prevent columns after that from appearing in the
  query builder (bug #50171)